--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   </header>
 
   <main>
+    <div id="valorDolarOficialContainer">
+      Valor del dólar oficial: <span id="valorDolarOficial"> </span>
+    </div>
       <div class="container-fluid bg-trasparent my-4 p-3" style="position: relative;">
         <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3" id="cards">
           
